--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -111,12 +111,9 @@
     <img src="/images/covers/" id="fsc-img">
 </div>
 
-@if (Model.LastReadPage != null)
-{
-    <div class="back-to-read">
-        <a href="@Model.LastReadPage" id="goBackToReadPage">Go back</a>
-    </div>
-}
+<div class="back-to-read">
+    <a id="goBackToReadPage">Go back</a>
+</div>
 
 <div class="post-wrap" id="post-wrap">
 
